fixed vertical alignment issues

--- a/jquery.multiselect.css
+++ b/jquery.multiselect.css
@@ -46,7 +46,7 @@
 
 .ms-options-wrap > .ms-options {
     position: absolute;
-    left: 0;
+    left: inherit;
     width: 100%;
     margin-top: 1px;
     margin-bottom: 20px;
